i18n/es/docusaurus-plugin-content-docs-ap/version-2.8/admin-guide/sep24/configuration.mdx
---
title: Configuración
sidebar_position: 20
---

import { CodeExample } from "@site/src/components/CodeExample";

## Modificar un archivo de información de Stellar

A continuación, modifiquemos el archivo `stellar.toml` creado [anteriormente][sep1-ap]. Las billeteras necesitan saber que la funcionalidad SEP-24 es admitida por tu negocio y también necesitan conocer todas las monedas que admites.

<CodeExample>

```toml
# dev.stellar.toml
ACCOUNTS = ["add your public keys for your distribution accounts here"]
SIGNING_KEY = "add your signing key here"
NETWORK_PASSPHRASE = "Test SDF Network ; September 2015"

TRANSFER_SERVER_SEP0024 = "http://localhost:8080/sep24"
WEB_AUTH_ENDPOINT = "http://localhost:8080/auth"

# Add support for USDC
[[CURRENCIES]]
code = "USDC"
issuer = "GBBD47IF6LWK7P7MDEVSCWR7DPUWV3NY3DTQEVFL4NAT4AQH3ZLLFLA5"
status = "test"
is_asset_anchored = false
desc = "USD Coin issued by Circle"

# Optionally, add support for XLM
[[CURRENCIES]]
code = "native"
status = "test"
is_asset_anchored = false
anchor_asset_type = "crypto"
desc = "XLM, the native token of the Stellar network."

[DOCUMENTATION]
ORG_NAME = "Your organization"
ORG_URL = "Your website"
ORG_DESCRIPTION = "A description of your organization"
```

</CodeExample>

Ten en cuenta que necesitarás crear otro archivo para tu despliegue de producción que use la frase de paso de la red pública, las URL de tu servicio en producción, tus cuentas de distribución Mainnet y la clave de firma, así como las cuentas emisoras Mainnet de los activos que utiliza tu servicio.

## Habilitar depósitos y retiradas alojados

Ahora estás listo para habilitar depósitos y retiradas alojados a través de la API SEP-24. Especifica lo siguiente en tu archivo `dev.assets.yaml` y cambia los valores dependiendo de tus preferencias. Este archivo de activos de ejemplo habilitará el soporte para el USDC de Circle y un USD fiat.

<CodeExample>

```yaml
# dev.assets.yaml
assets:
  - schema: stellar
    code: USDC
    issuer: GBBD47IF6LWK7P7MDEVSCWR7DPUWV3NY3DTQEVFL4NAT4AQH3ZLLFLA5
    distribution_account: GBLSAHONJRODSFTLOV225NZR4LHICH63RIFQTQN37L5CRTR2IMQ5UEK7
    significant_decimals: 2
    sep24_enabled: true
    deposit:
      enabled: true
    withdraw:
      enabled: true
  - schema: iso4217
    code: USD
    significant_decimals: 2
    deposit:
      enabled: true
    withdraw:
      enabled: true
  # Optional support for XLM
  - schema: stellar
    code: native
    distribution_account: GBLSAHONJRODSFTLOV225NZR4LHICH63RIFQTQN37L5CRTR2IMQ5UEK7
    significant_decimals: 7
    sep24_enabled: true
    deposit:
      enabled: true
    withdraw:
      enabled: true
```

</CodeExample>

La información proporcionada para el valor `assets` se mapea de cerca con la información que se expondrá a la aplicación de billetera usando el endpoint SEP-24 [`GET /info`][sep24-get-info]. La Anchor Platform también usa esta información para validar las solicitudes realizadas a tu servicio.

Agrega las siguientes variables a tu archivo de entorno.

<CodeExample>

```bash
# dev.env
SEP24_ENABLED=true
SEP24_INTERACTIVE_URL_BASE_URL=http://example.com
SEP24_MORE_INFO_URL_BASE_URL=http://example.com
SECRET_SEP24_INTERACTIVE_URL_JWT_SECRET="your encryption key shared with your business server"
SECRET_SEP24_MORE_INFO_URL_JWT_SECRET="your encryption key shared with your business server"
```

</CodeExample>

`SEP24_INTERACTIVE_URL_BASE_URL` es la URL que la Anchor Platform proporcionará a las aplicaciones de billetera cuando inicien transacciones. Las aplicaciones de billetera abrirán esta URL en una vista web dentro de su aplicación, pasando el control de la experiencia del usuario de la billetera a tu negocio. Esta URL apunta al widget web que tu negocio implementa. Contiene toda la lógica definida por el negocio. Profundizaremos más en esta experiencia en secciones posteriores.

`SEP24_MORE_INFO_URL_BASE_URL` es la URL que la Anchor Platform proporcionará a las aplicaciones de billetera cuando quieran mostrar información sobre una transacción iniciada anteriormente. Esta URL es más utilizada por las billeteras en sus vistas de historial de transacciones, y tu negocio puede definir qué información mostrar sobre la transacción.

`SECRET_SEP24_INTERACTIVE_URL_JWT_SECRET` y `SECRET_SEP24_MORE_INFO_URL_JWT_SECRET` son claves de cifrado que la Anchor Platform utilizará para generar tokens de corta duración que añadirá a las URL proporcionadas a la billetera. Tu servidor de negocio también debe tener estas claves en su entorno para que pueda verificar la firma del token.

## Probar con la billetera de demostración

¡Las billeteras ahora deberían ser capaces de descubrir, autenticar e iniciar transacciones con tu servicio! Tu proyecto y archivos fuente deberían parecerse a esto.

<CodeExample>

```
├── dev.env
├── docker-compose.yaml
├── config
│   ├── dev.assets.yaml
│   ├── dev.stellar.toml
```

</CodeExample>

Tu entorno ahora debería verse así.

<CodeExample>

```bash
# dev.env
ASSETS_TYPE=file
ASSETS_VALUE=/home/dev.assets.yaml

SEP1_ENABLED=true
SEP1_TOML_TYPE=file
SEP1_TOML_VALUE=/home/dev.stellar.toml

SEP10_ENABLED=true
SEP10_HOME_DOMAIN=localhost:8080
SECRET_SEP10_SIGNING_SEED="a Stellar private key"
SECRET_SEP10_JWT_SECRET="a secret encryption key"

SEP24_ENABLED=true
SEP24_INTERACTIVE_URL_BASE_URL=http://localhost:8081
SECRET_SEP24_INTERACTIVE_URL_JWT_SECRET="your encryption key shared with your business server"
SECRET_SEP24_MORE_INFO_URL_JWT_SECRET="your encryption key shared with your business server"
```

</CodeExample>

Para probar esto, ve a la [billetera de demostración Stellar][stellar-demo-wallet].

[![billetera de demostración conectada a la Anchor Platform](../../assets/anchor-platform-sep24-demo-wallet.png)](../../assets/anchor-platform-sep24-demo-wallet.png)

Inicia una transacción haciendo lo siguiente:

- Crear un nuevo keypair
- Haz clic en el botón "Agregar activo" e introduce
  - el código del activo Stellar en tu archivo `stellar.toml`
  - tu dominio principal, `localhost:8080`
- Selecciona el menú desplegable y haz clic en "SEP-24 Depósito", luego haz clic en "Iniciar"

La billetera de demostración debería poder encontrar tu archivo `stellar.toml`, autenticar usando el keypair Stellar que acabas de crear e iniciar una transacción. Sin embargo, cuando la billetera de demostración intenta abrir la URL proporcionada por la Anchor Platform, recibirás una página no encontrada.

[![billetera de demostración después de iniciar una transacción](../../assets/anchor-platform-sep24-demo-wallet-widget.png)](../../assets/anchor-platform-sep24-demo-wallet-widget.png)

[sep-1]: https://github.com/stellar/stellar-protocol/blob/master/ecosystem/sep-0001.md
[sep-9]: https://github.com/stellar/stellar-protocol/blob/master/ecosystem/sep-0009.md
[sep-24]: https://github.com/stellar/stellar-protocol/blob/master/ecosystem/sep-0024.md
[sep-38]: https://github.com/stellar/stellar-protocol/blob/master/ecosystem/sep-0038.md
[sep24-get-info]: https://github.com/stellar/stellar-protocol/blob/master/ecosystem/sep-0024.md#info
[anchor-platform-image]: https://hub.docker.com/r/stellar/anchor-platform
[docker-compose]: https://docs.docker.com/compose/
[minikube]: https://minikube.sigs.k8s.io/docs/
[kubernetes]: https://kubernetes.io/
[nginx]: https://www.nginx.com/
[ap-default-values]: https://github.com/stellar/java-stellar-anchor-sdk/blob/develop/platform/src/main/resources/config/anchor-config-default-values.yaml
[stellar-demo-wallet]: https://demo-wallet.stellar.org
[stellar-lab]: https://laboratory.stellar.org/
[postgresql]: https://www.postgresql.org/
[aurora-postgresql]: https://docs.aws.amazon.com/AmazonRDS/latest/AuroraUserGuide/Aurora.AuroraPostgreSQL.html
[h2]: https://www.h2database.com/html/main.html
[sqlite]: https://www.sqlite.org/index.html
[flyway]: https://documentation.red-gate.com/fd/redgate-flyway-documentation-138346877.html
[sep-24-ref-ui]: https://github.com/stellar/sep24-reference-ui
[sep-24-ref]: https://github.com/stellar/java-stellar-anchor-sdk/tree/develop/kotlin-reference-server
[sep1-ap]: ../sep1/README.mdx
