i18n/es/docusaurus-plugin-content-docs-ap/version-3.0/admin-guide/sep24/configuration.mdx
---
title: Configuración
sidebar_position: 20
---

import { CodeExample } from "@site/src/components/CodeExample";

## Modificar un archivo de información de Stellar

A continuación, vamos a modificar el archivo `stellar.toml` creado [anteriormente][sep1-ap]. Las billeteras necesitan saber que la funcionalidad SEP-24 está admitida por tu negocio, y también necesitan saber todas las monedas que admites.

<CodeExample>

```toml
# dev.stellar.toml
ACCOUNTS = ["add your public keys for your distribution accounts here"]
SIGNING_KEY = "add your signing key here"
NETWORK_PASSPHRASE = "Test SDF Network ; September 2015"

TRANSFER_SERVER_SEP0024 = "http://localhost:8080/sep24"
WEB_AUTH_ENDPOINT = "http://localhost:8080/auth"

# Add support for USDC
[[CURRENCIES]]
code = "USDC"
issuer = "GBBD47IF6LWK7P7MDEVSCWR7DPUWV3NY3DTQEVFL4NAT4AQH3ZLLFLA5"
status = "test"
is_asset_anchored = false
desc = "USD Coin issued by Circle"

# Optionally, add support for XLM
[[CURRENCIES]]
code = "native"
status = "test"
is_asset_anchored = false
anchor_asset_type = "crypto"
desc = "XLM, the native token of the Stellar network."

[DOCUMENTATION]
ORG_NAME = "Your organization"
ORG_URL = "Your website"
ORG_DESCRIPTION = "A description of your organization"
```

</CodeExample>

Ten en cuenta que necesitarás crear otro archivo para tu implementación en producción que utilice la frase de paso de la red pública, las URL de servicio de producción, tus cuentas de distribución de Mainnet y la clave de firma, así como las cuentas emisoras de Mainnet de los activos que utiliza tu servicio.

## Habilitar depósitos y retiradas alojados

Ahora estás listo para habilitar depósitos y retiradas alojados a través de la API SEP-24. Especifica lo siguiente en tu archivo `dev.assets.yaml`, y cambia los valores dependiendo de tus preferencias. Este archivo de activos de ejemplo habilitará el soporte para el USDC de Circle y un fiat USD.

<CodeExample>

```yaml
# dev.assets.yaml
items:
  - id: stellar:USDC:GBBD47IF6LWK7P7MDEVSCWR7DPUWV3NY3DTQEVFL4NAT4AQH3ZLLFLA5
    distribution_account: GBLSAHONJRODSFTLOV225NZR4LHICH63RIFQTQN37L5CRTR2IMQ5UEK7
    significant_decimals: 2
    sep24:
      enabled: true
      deposit:
        enabled: true
        min_amount: 0
        max_amount: 10
        methods:
          - SEPA
          - SWIFT
      withdraw:
        enabled: true
        min_amount: 0
        max_amount: 10
        methods:
          - bank_account
          - cash
  - id: iso4217:USD
    significant_decimals: 2
    # Optional support for XLM
  - id: stellar:native
    distribution_account: GBLSAHONJRODSFTLOV225NZR4LHICH63RIFQTQN37L5CRTR2IMQ5UEK7
    significant_decimals: 7
    sep24:
      enabled: true
      deposit:
        enabled: true
        min_amount: 0
        max_amount: 10
        methods:
          - SEPA
          - SWIFT
      withdraw:
        enabled: true
        min_amount: 0
        max_amount: 10
        methods:
          - bank_account
          - cash
```

</CodeExample>

La información proporcionada para el valor `assets` se corresponde estrechamente con la información que se expondrá a la aplicación billetera utilizando el endpoint [`GET /info`][sep24-get-info] SEP-24. La Anchor Platform también utiliza esta información para validar las solicitudes realizadas a tu servicio.

Añade las siguientes variables a tu archivo de entorno.

<CodeExample>

```bash
# dev.env
// Required
SEP24_ENABLED=true
SEP24_INTERACTIVE_URL_BASE_URL=http://example.com
SEP24_MORE_INFO_URL_BASE_URL=http://example.com
SECRET_SEP24_INTERACTIVE_URL_JWT_SECRET="your encryption key shared with your business server"
SECRET_SEP24_MORE_INFO_URL_JWT_SECRET="your encryption key shared with your business server"

// Optional
SEP24_INITIAL_USER_DEADLINE_SECONDS=1209600
```

</CodeExample>

`SEP24_INTERACTIVE_URL_BASE_URL` es la URL que la Anchor Platform proporcionará a las aplicaciones de billetera cuando inicien transacciones. Las aplicaciones de billetera abrirán esta URL en una vista web dentro de su aplicación, entregando el control de la experiencia del usuario de la billetera a tu negocio. Esta URL apunta al widget web que implementa tu negocio. Contiene toda la lógica definida por el negocio. Ahondaremos más en esta experiencia en secciones posteriores.

`SEP24_MORE_INFO_URL_BASE_URL` es la URL que la Anchor Platform proporcionará a las aplicaciones de billetera cuando quieran mostrar información sobre una transacción iniciada anteriormente. Esta URL se utiliza con más frecuencia por las billeteras en sus vistas de historial de transacciones, y tu negocio puede definir qué información mostrar sobre la transacción.

`SECRET_SEP24_INTERACTIVE_URL_JWT_SECRET` y `SECRET_SEP24_MORE_INFO_URL_JWT_SECRET` son claves de cifrado que la Anchor Platform utilizará para generar tokens de corta duración que añadirá a las URLs proporcionadas a la billetera. Tu servidor de negocio también debe tener estas claves en su entorno para que pueda verificar la firma del token.

`SEP24_INITIAL_USER_DEADLINE_SECONDS` es un parámetro opcional que define el tiempo en segundos que un usuario tiene para actuar antes de que la transacción pase al siguiente estado. Determina el campo `user_action_required_by`, que indica la fecha límite. Consulta [Métodos JSON-RPC][json-rpc-methods] para ejemplos de uso.

## Probar con la billetera de demostración

¡Las billeteras ahora deberían poder descubrir, autenticar e iniciar transacciones con tu servicio! Tu proyecto y archivos fuente deberían verse ahora algo así.

<CodeExample>

```
├── dev.env
├── docker-compose.yaml
├── config
│   ├── dev.assets.yaml
│   ├── dev.stellar.toml
```

</CodeExample>

Tu entorno debería verse ahora como el siguiente.

<CodeExample>

```bash
# dev.env
ASSETS_TYPE=file
ASSETS_VALUE=/home/dev.assets.yaml

SEP1_ENABLED=true
SEP1_TOML_TYPE=file
SEP1_TOML_VALUE=/home/dev.stellar.toml

SEP10_ENABLED=true
SEP10_HOME_DOMAIN=localhost:8080
SECRET_SEP10_SIGNING_SEED="a Stellar private key"
SECRET_SEP10_JWT_SECRET="a secret encryption key"

SEP24_ENABLED=true
SEP24_INTERACTIVE_URL_BASE_URL=http://localhost:8081
SECRET_SEP24_INTERACTIVE_URL_JWT_SECRET="your encryption key shared with your business server"
SECRET_SEP24_MORE_INFO_URL_JWT_SECRET="your encryption key shared with your business server"
```

</CodeExample>

Para probar esto, dirígete a la [Billetera de Demostración Stellar][stellar-demo-wallet].

[![billetera de demostración conectada a la Anchor Platform](../../assets/anchor-platform-sep24-demo-wallet.png)](../../assets/anchor-platform-sep24-demo-wallet.png)

Inicia una transacción haciendo lo siguiente:

- Crear un nuevo keypair
- Haz clic en el botón "Añadir Activo" e introduce
  - el código del activo Stellar en tu archivo `stellar.toml`
  - tu dominio principal, `localhost:8080`
- Selecciona el dropdown y haz clic en "Depósito SEP-24", luego haz clic en "Iniciar"

La billetera de demostración debería poder encontrar tu archivo `stellar.toml`, autenticar usando el keypair Stellar que acabas de crear, e iniciar una transacción. Sin embargo, cuando la billetera de demostración intente abrir la URL proporcionada por la Anchor Platform, recibirás una página no encontrada.

[![billetera de demostración después de iniciar una transacción](../../assets/anchor-platform-sep24-demo-wallet-widget.png)](../../assets/anchor-platform-sep24-demo-wallet-widget.png)

[sep-1]: https://github.com/stellar/stellar-protocol/blob/master/ecosystem/sep-0001.md
[sep-9]: https://github.com/stellar/stellar-protocol/blob/master/ecosystem/sep-0009.md
[sep-24]: https://github.com/stellar/stellar-protocol/blob/master/ecosystem/sep-0024.md
[sep-38]: https://github.com/stellar/stellar-protocol/blob/master/ecosystem/sep-0038.md
[sep24-get-info]: https://github.com/stellar/stellar-protocol/blob/master/ecosystem/sep-0024.md#info
[anchor-platform-image]: https://hub.docker.com/r/stellar/anchor-platform
[docker-compose]: https://docs.docker.com/compose/
[minikube]: https://minikube.sigs.k8s.io/docs/
[kubernetes]: https://kubernetes.io/
[nginx]: https://www.nginx.com/
[ap-default-values]: https://github.com/stellar/java-stellar-anchor-sdk/blob/develop/platform/src/main/resources/config/anchor-config-default-values.yaml
[stellar-demo-wallet]: https://demo-wallet.stellar.org
[stellar-lab]: https://lab.stellar.org/
[postgresql]: https://www.postgresql.org/
[aurora-postgresql]: https://docs.aws.amazon.com/AmazonRDS/latest/AuroraUserGuide/Aurora.AuroraPostgreSQL.html
[h2]: https://www.h2database.com/html/main.html
[sqlite]: https://www.sqlite.org/index.html
[flyway]: https://documentation.red-gate.com/fd/redgate-flyway-documentation-138346877.html
[sep-24-ref-ui]: https://github.com/stellar/sep24-reference-ui
[sep-24-ref]: https://github.com/stellar/java-stellar-anchor-sdk/tree/develop/kotlin-reference-server
[sep1-ap]: ../sep1/README.mdx
[json-rpc-methods]: ../../api-reference/platform/rpc/methods/README.mdx
